Changelog
=========


1.2.9 (unreleased)
------------------

- Related Items in Traktanden are now listed and linked.
  [jinfanger]


1.2.8 (2011-09-06)
------------------

- added task-list
  [jinfanger]


1.2.5 (2011-04-01)
------------------

- Make start and end date required.
  [mathias.leimgruber]

- Auto-fill end date with start date infos.
  [mathias.leimgruber]


1.2.4 (2011-03-29)
------------------

- Fixed list with string and unicode => unicode-error
  [jinfanger]


1.2.3 (2011-02-02)
------------------

- Improve file view (don't show related items twice / remove default
  description)
  [mathias.leimgruber]

- Added missing normalizeString definition.
  [mathias.leimgruber]


1.2.1 (2010-12-22)
------------------

- Only show head_of_meeting if meeting typ ist "meeting"
  [mathias.leimgruber]

- Removed old poodle stuff, the date will be shown correctly now.
  [mathias.leimgruber]



1.1 (2010-11-18)
----------------

- Implemented PDF export.
  [jinfanger]


1.0 (2010-10-26)
----------------

- Initial release.